@@ -59,7 +59,7 @@ static ccss_node_class_t _node_class = {
 	.get_base_style		= NULL,
 	.get_id			= (ccss_node_get_id_f) get_id,
 	.get_type		= (ccss_node_get_type_f) get_type,
-	.get_class		= NULL,
+	.get_classes		= NULL,
 	.get_pseudo_classes	= (ccss_node_get_pseudo_classes_f) get_pseudo_classes,
 	.get_attribute		= NULL,
 	.get_viewport		= NULL,
